# dev-FastAPI

./: pyproject.toml
app/: book.py  main.py
